# contextweave

./: .gitignore  CLAUDE.md  MCP_SETUP.md  README.md  append_cli.py  cli.py  config.example.toml  cw  cw.bat  pyproject.toml  setup.bat  setup.sh
.claude/: settings.json
.claude/hooks/: post_tool_failure.py  post_tool_use.py  pre_compact.py  pre_tool_use.py  session_end.py  session_start.py  stop.py  subagent_start.py  subagent_stop.py
.github/workflows/: ci.yml
contextweave/: _index.md
contextweave/.obsidian/: workspace.json
contextweave/_templates/: decision-record.md  handoff-note.md  session-log.md
contextweave/projects/audit-project/: BRIEF-2026-05-22.md  BRIEF-2026-05-23.md  GRAPH.md  PROJECT.md
contextweave/projects/contextweave/: PROJECT.md
contextweave/projects/test-project/: BRIEF-2026-05-22.md
extension/: background.js  content.js  inject-banner.js  manifest.json  popup.css  popup.html  popup.js
extension/adapters/: chatgpt.js  claude_ai.js  gemini_web.js
scripts/: install.sh  setup_obsidian.md
src/contextweave/: __init__.py  _cli_entry.py  brief.py  cli.py  codegraph.py  config.py  consolidate.py  db.py  diff.py  display.py  export.py  graph.py  handoff.py  hooks.py  inject.py  llm.py  mcp_server.py  memory.py  project.py  retrieval.py  session.py  vault.py  vault_api.py  watcher.py
src/contextweave/adapters/: __init__.py  base.py  claude_code.py  copilot.py  gemini.py  generic.py
src/contextweave/templates/: decision.md  handoff.md  session-log.md
src/contextweave/viewer/: __init__.py  app.py
(+18 files in other folders)
