[project]
name = "contextweave"
version = "0.1.0"
description = "A local-first, model-agnostic context persistence layer for multi-agent AI workflows."
readme = "README.md"
authors = [
    { name = "Kashish", email = "kashishsingh742@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "python-frontmatter>=1.2.0",
    "rich>=13.9.4",
    "toml>=0.10.2",
    "requests>=2.32.3",
    "sentence-transformers>=3.0.1",
    "chromadb>=0.5.5",
]

[project.scripts]
contextweave = "contextweave.cli:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
